<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="appName">OpenMIDaaS</string>
    <string name="registering_text">Registering&#8230;</string>
    <string name="registration_success_text">Registration Success!</string>
    <string name="checking_registration">Checking registration&#8230;</string>
    <string name="registration_already_present_text">Device is already registered!</string>
    <string name="registration_error_text">Registration Error!</string>
    <string name="tvDefaultAttributeName">Name: </string>
	<string name="tvVerificationPin">Verification Code: </string>
	<string name="btnStartVerification">Send Verification Code</string>
	<string name="resendVerificationText">Resend Code</string>
	<string name="btnCompleteVerification">Verify</string>
	<string name="tvDefaultStartVerificationInfoText">Enter your email and tap on \"Send Verification Code\" to continue. We will send you an email with a verification code.</string>
	<string name="tvCompleteVerificationInfoText">Enter the verification code you received and tap on \"Verify\" to complete the process.</string>
	<string name="attribute_verification_start_success">Attribute verification started&#8230;</string>
	<string name="verification_success_tag">has been successfully verified</string>
	<string name="missing_attribute_value_text">Attribute value appears to be incorrect. Please re-enter it.</string>
	<string name="tvStep1Text">Step 1</string>
	<string name="tvStep2Text">Step 2</string>
	<string name="btnDelete">Delete</string>
	<string name="loadingText">Loading&#8230;</string>
	<string name="sendingEmailText">Sending email&#8230;</string>
	<string name="init_attribute_verification">Initializing verification</string>
	<string name="noAttributesPresentText">You do not have any information.\nTry adding some by tapping the button on the top right corner.</string>
	<string name="home_screen_text">Home</string>
	<string name="no_qrcode_dialog_message">You will need to update the Google Search app in the app store or install the ZXing Barcode scanner app in order to 
	    scan a QR code</string>
    <string name="no_qrcode_dialog_title">Update or install</string>
    <string name="install_button">Install</string>
    <string name="cancel">Cancel</string>
    <string name="scan_qr_code">Scan\nQR Code</string>
    <string name="manage_info">Manage\nInformation</string>
    <string name="rear_camera_not_present_text">No rear camera was detected on this phone. You will need a device equipped with a rear camera to take a picture of a QR code.</string>
    <string name="country_prompt">Choose a country</string>
	<string-array name="country_arrays">
        <item>Canada</item>
        <item>United States</item>
    </string-array>
    <string name="state_prompt">Choose a state/province</string>
	<string-array name="state_arrays">
	    <item>Alberta</item>
	    <item>British Columbia</item>
	    <item>Manitoba</item>
	    <item>New Brunswick</item>
	    <item>Newfoundland</item>
	    <item>Nova Scotia</item>
	    <item>Nunavut</item>
        <item>Ontario</item>
        <item>Prince Edward Island</item>
        <item>Quebec</item>
        <item>Saskatchewan</item>
        <item>Northwest Territories</item>
        <item>Yukon Territory</item>
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>     
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utha</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
    <string name="address_labels_prompt">Choose a label for this address</string>
	<string-array name="address_labels_arrays">
	    <item>None</item>
        <item>Home</item>
        <item>Work</item>
        <item>Shipping</item>
        <item>Billing</item>
    </string-array>
    <string name="phone_type_prompt">Choose a label for this phone</string>
    <string-array name="phone_types_array">
	    <item>None</item>
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
    </string-array>
    <string name="streetAddressHint">Street Address</string>
    <string name="cityHint">City/Town</string>
    <string name="zipHint">Zip/Postal Code</string>
    <string name="btnSaveAndCloseText">Save and Close</string>
    <string name="selectLabelText">Select a label: </string>
    <string name="creditCardHint">Card Number</string>
    <string name="month_prompt">Expiry Month</string>
    <string name="month_label">Month</string>
	<string-array name="month_array">
	    <item>01</item>
	    <item>02</item>
	    <item>03</item>
	    <item>04</item>
	    <item>05</item>
	    <item>06</item>
	    <item>07</item>
	    <item>08</item>
	    <item>09</item>
	    <item>10</item>
	    <item>11</item>
	    <item>12</item>
	</string-array>
	<string name="year_prompt">Expiry Year</string>
	<string name="year_label">Year</string>
	<string name="creditCardCCVHint">CCV</string>
	<string name="creditCardHolderNameHint">Card Holder Name</string>
    <string name="authorization_title_text">Authorize</string>
    <string name="authorizeButtonText">Authorize</string>
    <string name="fatalErrorMessage">Fatal error. Please restart the app</string>
    <string name="rpInfoText">is requesting the following information</string>
    <string name="defaultAuthorizationInfo"><b>Bold</b> fields are required fields.</string>
    <string name="doneText">Done</string>
    <string name="doneImageDescription">You are done</string>
    <string name="enterUrl">Enter a \nURL</string>
    <string name="enterUrlMessageBoxText">Enter the URL as shown on your browser</string>
    <string name="plusSign"><b>+</b></string>
    <string name="enterPhoneRequestMsg">Please enter your phone number along with country code:</string>
    <string name="enterPhoneVerifyCodeMsg">Enter the verification code you received to finish the verification:</string>
    <string name="tvPhStep1Text">Step 1: Enter Phone Number Details</string>
    <string name="tvPhStep2Text">Step 2:</string>
    <string name="tvPhStep3Text">Step 3:</string>
    <string name="tvPhVerifyMethodText">Choose a verification method and tap on \"Send Verification Code\" to continue:</string>
    <string name="enterPhVerifyCodeMsg">Enter the verification code received and tap \"Verify\" to complete the verification process.</string>
    <string name="enterPhoneTypeMsg">Choose the type of phone number:</string>
    <string name="btnStartPhVerification">Send Verification Code</string>
	<string name="btnCompletePhVerification">Verify</string>
	<string name="rdBtnSmsText">SMS</string>
	<string name="rdBtnPhoneText">Phone Call</string>
    <string name="noAttributeSelectedLabel">No attribute selected</string>
    <string name="attributeAddOnFlyError">Attribute could not be added to the list. </string>
    <string name="rememberAuthorization">Remember my selection</string>
    <string name="consentActivityTitleText">Revoke Consent</string>
    <string name="consentDetailsDialogTitle">Consent Details</string>
    <string name="btnRevokeConsent">Revoke Consent</string>
    <string name="noConsentsPresentText">You have no saved consents.\nYou can save consents by checking the \"Remember my selection\" box when authorizing.</string>
    <string name="consentDetailsDialogInfoText">You have consented to release the following to</string>
    <string name="consentsSummaryInfoText">The following lists your saved consents. Tap a row to view more about the consent.</string>
    <string name="authorizingRequest">Authorizing request</string>
    <string name="authorizingAlreadyPresentConsent">Authorizing with already consented information</string>
    <string-array name="additionalPersonalInfoArray">
	    <item>Birthday</item>
	    <item>Gender</item>
	</string-array>
	<string name="addMorePersonalInfo">Add Personal Info</string>
	<string-array name="genders">
	    <item>Male</item>
	    <item>Female</item>
	</string-array>
	<string name="birthdayDialogTitle">Select your birthday</string>
	<string name="genderDialogTitle">Select your gender</string>
	<string name="unverifiableAttributeText">Attribute is non verifiable</string>
	<string name="verifiedAttributeText">Attribute already verified</string>
	<string name="unknownAttributeStateText">Attribute state is unknown. Cannot re-verify</string>
	<string name="errorInAttributeSaveText">Attribute has not been saved. Error re-verifying</string>
	<string name="enterPinText">Enter the PIN you received below</string>
	<string name="modifyAttributeText">Enter a new value and tap save</string>
	<string name="generalAttributeNamePrompt">Enter a name</string>
	<string name="generalAttributeValuePrompt">Enter a value</string>
	<string name="generalAttributeDialogCollectionTitle">Enter a name and value and tap save</string>
	<string name="saveButtonText">Save</string>
	<string name="okButtonText">OK</string>
	<string name="verifyButtonText">Verify</string>
	<string name="cancelButtonText">Cancel</string>
	<string name="backButtonText">Back</string>
	<string name="deleteButtonText">Delete</string>
	<string name="defaultErrorDialogTitle">Error</string>
	<string name="clearButtonText">CLEAR</string>
	<string name="reVerifyButtonText">Re-Verify</string>
	<string name="radioButtonPhoneVerifyText">Phone Call </string>
	<string name="radioButtonSMSVerifyText">SMS</string>
	<string name="help">Help</string>
	<string name="aboutUs">About</string>
	<string name="revokePermission">Revoke Consent</string>
	<string name="aboutUsHeading">{Open}MIDaaS</string>
    <string name="openMIDaasFullForm">Mobile Identity as a Service</string>
</resources>