<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/etEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvEmailAddress"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvStep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/tvStep1Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvStartVerificationInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvStep1"
        android:padding="5dp"
        android:text="@string/tvStartVerificationInfoText" />

    <TextView
        android:id="@+id/tvEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvStartVerificationInfo"
        android:layout_marginTop="16dp"
        android:text="@string/tvEmailAddress" />

    <Button
        android:id="@+id/btnStartEmailVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmailAddress"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/btnStartVerification" />

    <TextView
        android:id="@+id/tvVerificationPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/etVerificationCode"
        android:layout_alignParentLeft="true"
        android:text="@string/tvVerificationPin" />

    <Button
        android:id="@+id/btnCompleteEmailVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:text="@string/btnCompleteVerification" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvStep2"
        android:padding="5dp"
        android:text="@string/tvCompleteVerificationInfoText" />

    <EditText
        android:id="@+id/etVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:ems="10" />

    <TextView
        android:id="@+id/tvStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/tvStep2Text"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>