<!--
  Copyright 2013 SecureKey Technologies Inc.
  
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
    
  http://www.apache.org/licenses/LICENSE-2.0
   
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/default_bg"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/tvStep1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/tvStep1Text"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvStartVerificationInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvStep1"
        android:padding="5dp"
        android:textColor="#000000"
        android:text="@string/tvDefaultStartVerificationInfoText" />

    <Button
        android:id="@+id/btnCompleteAttributeVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:text="@string/btnCompleteVerification" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvStep2"
        android:padding="5dp"
        android:textColor="#000000"
        android:text="@string/tvCompleteVerificationInfoText" />

    <EditText
        android:id="@+id/etVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="24dp"
        android:inputType="text"
        android:ems="10" />

    <TextView
        android:id="@+id/tvStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:text="@string/tvStep2Text"
        android:textColor="#000000"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnStartAttributeVerification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvStep2"
        android:layout_centerHorizontal="true"
        android:text="@string/btnStartVerification" />

    <EditText
        android:id="@+id/etAttributeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnStartAttributeVerification"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:inputType="text" >
        <requestFocus />
     </EditText>

</RelativeLayout>
